Layout bug fixes

--- a/verdocs-web-sdk/src/components/fields/verdocs-field-checkbox/verdocs-field-checkbox.scss
+++ b/verdocs-web-sdk/src/components/fields/verdocs-field-checkbox/verdocs-field-checkbox.scss
@@ -2,9 +2,9 @@
 
 // See https://www.kallmanation.com/styling-a-checkbox-with-only-css
 verdocs-field-checkbox {
+  padding: 0;
   width: 16px;
   height: 16px;
-  padding: 1px;
   display: block;
   box-sizing: border-box;
   transform-origin: bottom left;
@@ -89,7 +89,7 @@ verdocs-field-checkbox {
 
   .settings-icon {
     position: absolute;
-    top: -3px;
+    top: -5px;
     left: -20px;
     display: inline-block;
     cursor: pointer;
