--- a/verdocs-web-sdk/src/components/fields/verdocs-field-date/verdocs-field-date.scss
+++ b/verdocs-web-sdk/src/components/fields/verdocs-field-date/verdocs-field-date.scss
@@ -14,7 +14,7 @@ verdocs-field-date {
 
   label {
     top: -14px;
-    left: -1px;
+    left: 0;
     height: 14px;
     color: white;
     padding: 0 4px;
