--- a/verdocs-web-sdk/src/components/fields/verdocs-field-dropdown/verdocs-field-dropdown.scss
+++ b/verdocs-web-sdk/src/components/fields/verdocs-field-dropdown/verdocs-field-dropdown.scss
@@ -12,7 +12,7 @@ verdocs-field-dropdown {
 
   label {
     top: -14px;
-    left: -1px;
+    left: 0;
     height: 14px;
     color: white;
     padding: 0 4px;
